pull down pre-built package tarball from npm instead of building from source

--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <upstream.version>4.7.16</upstream.version>
-        <upstream.url>https://github.com/babel/babel/archive/v${upstream.version}.zip</upstream.url>
+
+        <upstream.url>https://registry.npmjs.org/babel-core/-/babel-core-${upstream.version}.tgz</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
-        <jsBuildDir>${project.build.directory}/${project.artifactId}-${upstream.version}</jsBuildDir>
+        <extractDir>${project.build.directory}/${project.artifactId}-${upstream.version}</extractDir>
         <requirejs>
             {
             }
@@ -65,25 +66,16 @@
                             <target>
 
                                 <echo message="download archive" />
+                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.tgz" />
 
-                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip" />
-
-                                <echo message="unzip archive" />
-                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
-
-                                <echo message="bootstrapping js project" />
-                                <exec executable="npm" failonerror="true" dir="${jsBuildDir}">
-                                    <arg value="install" />
-                                </exec>
-
-                                <echo message="building js project" />
-                                <exec executable="make" failonerror="true" dir="${jsBuildDir}">
-                                    <arg value="build" />
-                                </exec>
+                                <echo message="uncompress archive" />
+                                <gunzip src="${project.build.directory}/${project.artifactId}.tgz" dest="${project.build.directory}/${project.artifactId}.tar" />
+                                <untar src="${project.build.directory}/${project.artifactId}.tar" dest="${extractDir}" />
 
                                 <echo message="moving resources" />
+
                                 <move todir="${destDir}">
-                                    <fileset dir="${jsBuildDir}/dist" />
+                                    <fileset dir="${extractDir}/package" />
                                 </move>
 
                             </target>
