--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>babel</artifactId>
-    <version>4.7.16-1-SNAPSHOT</version>
+    <version>5.8.29-1-SNAPSHOT</version>
     <name>Babel</name>
     <description>WebJar for Babel</description>
     <url>http://webjars.org</url>
@@ -27,7 +27,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstream.version>4.7.16</upstream.version>
+        <upstream.version>5.8.29</upstream.version>
 
         <upstream.url>https://registry.npmjs.org/babel-core/-/babel-core-${upstream.version}.tgz</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
@@ -88,7 +88,9 @@
                                 <echo message="moving resources" />
 
                                 <move todir="${destDir}">
-                                    <fileset dir="${extractDir}/package" />
+                                    <fileset dir="${extractDir}/package">
+                                      <include name="browser*.js" />
+                                    </fileset>
                                 </move>
 
                             </target>
