--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>babel</artifactId>
-    <version>6.3.26-SNAPSHOT</version>
+    <version>6.3.26</version>
     <name>Babel</name>
     <description>WebJar for Babel</description>
     <url>http://webjars.org</url>
@@ -58,7 +58,7 @@
         <url>http://github.com/webjars/babel</url>
         <connection>scm:git:https://github.com/webjars/babel.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/babel.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>babel-6.3.26</tag>
     </scm>
 
     <build>
